# libwinpath

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: libwinpath.h
src/: CMakeLists.txt  path.c  winpath.sh  wrapper.c
src/wine/: LICENSE  casemap.c  common.h  path.c  string.c
